fix: :lipstick: fix path of icon for closing lore on narrow screeens

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -1129,7 +1129,7 @@ input[type="search"]::-webkit-search-cancel-button {
         bottom: 0;
         right: 0;
         width: 44px;
-        background-image: url(/resources/img/icons/window-close.png);
+        background-image: url(/resources/img/icons/close.svg);
         background-size: 24px 24px;
         background-position: center center;
         background-repeat: no-repeat;
